fix chrome overflow error

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ html, body, #root {
   height: 100%;
   color: var(--color-text-primary);
   background-color: var(--color-paper);
+  overflow: hidden;
 }
 
 body {
@@ -43,6 +44,10 @@ body {
   font-family: 'Nunito Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  overflow: auto;
 }
 
 button, [role="button"], a, label, [role="menuitem"], [role="option"] {
